MarcinProject_02_Local/MarcinProject_02/force-app/main/default/objects/Account/fields/Marcin_Test_2__c.field-meta.xml
<CustomField>
    <fullName>Marcin_Test_2__c</fullName>
    <label>Marcin Test 2</label>
    <type>Date</type>
</CustomField>