MarcinProject_02_Local/MarcinProject_02/force-app/main/default/objects/Account/fields/MarcinTest__c.field-meta.xml
<CustomField>
    <fullName>MarcinTest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MarcinTest</label>
    <type>Checkbox</type>
</CustomField>