MarcinProject_02_Local/MarcinProject_02/force-app/main/default/objects/Account/fields/TEST02__c.field-meta.xml
<CustomField>
    <fullName>TEST02__c</fullName>
    <label>TEST02</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>